--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <h3><i class="fa fa-twitter" aria-hidden='true'></i> </h3>
             </div>
     
-        <div class="copyright">Made with <i class="fa fa-heart" aria-hidden="true" style="color:red;"></i> by <a href="https://10ciprian.cf">10CIPRIAN.COM</a></div>
+        <div class="copyright">Made with <i class="fa fa-heart" aria-hidden="true" style="color:red;"></i> by <a href="https://10ciprian.com">10CIPRIAN.COM</a></div>
     </footer>
     <script src="app.js"></script>
 </body>
