--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-------------------------10CIPRIAN WEB-DEV © --------------- -->
+<!-------------------------DRAGOS WEB-DEV © --------------- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -81,7 +81,7 @@
             <div class="our-team">
                 <div class="member-team">
                     <div class="member-image"> 
-                       <img src="ME.jpg" alt="ceo" class="eu"> 
+                       <img src="avatar.png" alt="ceo" class="eu"> 
                     </div>
                     <div class="member-container">
                         <h1>Web Developer</h1>
@@ -135,7 +135,7 @@
                 <h3><i class="fa fa-twitter" aria-hidden='true'></i> </h3>
             </div>
     
-        <div class="copyright">Made with <i class="fa fa-heart" aria-hidden="true" style="color:red;"></i> by <a href="https://10ciprian.com">10CIPRIAN.COM</a></div>
+        <div class="copyright">Made with <i class="fa fa-heart" aria-hidden="true" style="color:red;"></i> by DRAGOS</div>
     </footer>
     <script src="app.js"></script>
 </body>
